// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a featured filter 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description",
      "feature_image": null,
      "filter": "featured:true",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 0,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 1,
        },
      ],
      "title": "Test Collection",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a featured filter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "374",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a published_at filter 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description with published_at filter",
      "feature_image": null,
      "filter": "published_at:>=2022-05-25",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 0,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 1,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 2,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 3,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 4,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 5,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 6,
        },
      ],
      "title": "Test Collection with published_at filter",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a published_at filter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "681",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a relational tag filter 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description with relational tag filter",
      "feature_image": null,
      "filter": "tag:kitchen-sink",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 0,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": 1,
        },
      ],
      "title": "Test Collection with relational tag filter",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Automatic Collection Filtering Creates an automatic Collection with a relational tag filter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "431",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Browse Can browse Collections 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Collection with all posts",
      "feature_image": null,
      "filter": "status:published",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
      ],
      "slug": "index",
      "title": "Index",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Collection of featured posts",
      "feature_image": null,
      "filter": "featured:true",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
      ],
      "slug": "featured",
      "title": "Featured Posts",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description",
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection to Read",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 4,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
}
`;

exports[`Collections API Browse Can browse Collections 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1759",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts 1: [body] 1`] = `
Object {
  "collection_posts": Array [
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "welcome",
      "title": "Start here for a quick overview of everything you need to know",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "design",
      "title": "Customizing your brand and design settings",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "write",
      "title": "Writing and managing content in Ghost, an advanced guide",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "portal",
      "title": "Building your audience with subscriber signups",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "sell",
      "title": "Selling premium memberships with recurring revenue",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "grow",
      "title": "How to grow your business around an audience",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "integrations",
      "title": "Setting up apps and custom integrations",
    },
    Object {
      "featured": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "not-so-short-bit-complex",
      "title": "Not so short, bit complex",
    },
    Object {
      "featured": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "short-and-sweet",
      "title": "Short and Sweet",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "ghostly-kitchen-sink",
      "title": "Ghostly Kitchen Sink",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "html-ipsum",
      "title": "HTML Ipsum",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 11,
    },
  },
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1423",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts 3: [body] 1`] = `
Object {
  "collection_posts": Array [
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "write",
      "title": "Writing and managing content in Ghost, an advanced guide",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "portal",
      "title": "Building your audience with subscriber signups",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "2",
      "next": null,
      "page": "2",
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "370",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts using paging parameters 1: [body] 1`] = `
Object {
  "collection_posts": Array [
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "write",
      "title": "Writing and managing content in Ghost, an advanced guide",
    },
    Object {
      "featured": false,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "portal",
      "title": "Building your audience with subscriber signups",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "2",
      "next": null,
      "page": "2",
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Collections API Browse Posts Can browse Collections Posts using paging parameters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "370",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can add a Collection 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description",
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Can add a Collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "263",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can browse Collections 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Collection with all posts",
      "feature_image": null,
      "filter": "status:published",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
      ],
      "slug": "index",
      "title": "Index",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Collection of featured posts",
      "feature_image": null,
      "filter": "featured:true",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
        Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "sort_order": Any<Number>,
        },
      ],
      "slug": "featured",
      "title": "Featured Posts",
      "type": "automatic",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": "Test Collection Description",
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 3,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 3,
    },
  },
}
`;

exports[`Collections API Can browse Collections 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1530",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can delete a Collection 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection to Delete",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Can delete a Collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "248",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can delete a Collection 3: [body] 1`] = `Object {}`;

exports[`Collections API Can delete a Collection 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can delete a Collection 5: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Collection not found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot read collection.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Collections API Can delete a Collection 6: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "254",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can read a Collection 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection to Read",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Can read a Collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "246",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/collections\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Can read a Collection 3: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection to Read",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Can read a Collection 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "246",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Cannot delete a built in collection 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": Any<String>,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Method not allowed, cannot delete collection.",
      "property": null,
      "type": "MethodNotAllowedError",
    },
  ],
}
`;

exports[`Collections API Cannot delete a built in collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "355",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Edit Can edit a Collection 1: [body] 1`] = `
Object {
  "collections": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "filter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "posts": Array [],
      "title": "Test Collection Edited",
      "type": "manual",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Collections API Edit Can edit a Collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "245",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Collections API Edit Fails to edit unexistent Collection 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Collection not found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot edit collection.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Collections API Edit Fails to edit unexistent Collection 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "254",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
